# boltz-fee-bot

./: .dockerignore  .env.sample  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  api.py  bot.py  conftest.py  consts.py  db.py  docker-compose.yml  ntfy.py  ntfy_api.py  pyproject.toml  settings.py  test_bot.py  test_url_params.py  test_utils.py  url_params.py  utils.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 51c918a7ea6c_init.py  b9e3f53b7d64_custom_fee_config.py  c3a8f21b4e5d_ntfy_subscriptions.py  c7f2a8d91e23_add_multiplatform_support.py
commands/: __init__.py  core.py  mysubscriptions.py  start.py  subscribe.py  unsubscribe.py
simplex-adapter/: Dockerfile  package.json
simplex-adapter/src/: index.ts
tests/: helpers.py  test_dispatcher.py  test_migration.py
tests/e2e/: conftest.py  get_session_string.py  test_commands.py  test_simplex_commands.py
tests/test_platforms/: test_base.py  test_simplex.py  test_telegram.py
