[project]
name = "boltz-fee-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "asyncpg>=0.30.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "python-telegram-bot[job-queue]>=21.10",
    "sqlalchemy>=2.0.37",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
